--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,6 +5,12 @@ repo: status # The name of this repository
 sites:
   - name: IdP
     url: $IDP_URL
+  - name: OPP
+    url: $OPP_URL
+    __dangerous__body_down_if_text_missing: 'pass'
+    headers:
+     - "$OPP_KEY"
+     - "Content-Type: application/json"
     
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
