--- a/.github/workflows/uptime2.yml
+++ b/.github/workflows/uptime2.yml
@@ -14,7 +14,7 @@
 # * More by Anand Chowdhary: https://anandchowdhary.com
 
 
-name: Uptime CI
+name: Uptime CI 2
 on:
   schedule:
     - cron: "*/5 * * * *"
